Fix max-width screen size for header so the logo isn't cut off on medium screens

--- a/pegasus/sites.v3/code.org/public/css/mobile_header.css
+++ b/pegasus/sites.v3/code.org/public/css/mobile_header.css
@@ -131,7 +131,7 @@
   display: none;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 970px) {
   #pageheader-wrapper {
     padding-top: 5px;
   }
